--- a/force-app/main/default/classes/ValitiveServices.cls
+++ b/force-app/main/default/classes/ValitiveServices.cls
@@ -2,14 +2,29 @@
 
 public class ValitiveServices {
 
-    private final ValitiveClient client;
 
-    public ValitiveServices(ValitiveClient client) {
-        this.client = client;
+    private IValitivePropertiesProvider IPROPERTIES_PROVIDER = new ValitivePropertiesProvider();
+    private ValitiveClient client = new ValitiveClient(IPROPERTIES_PROVIDER);
+
+    @TestVisible
+    private void setMockIValitivePropertiesProvider(IValitivePropertiesProvider provider) {
+        this.IPROPERTIES_PROVIDER = provider;
+        this.client = new ValitiveClient(provider);
     }
 
-    public HttpResponse addPersonToMonitorSet(String personId, String monitorSetId) {
+    private HttpRequest createHttpRequest(String method, String url, String body) {
         HttpRequest request = new HttpRequest();
+        request.setMethod(method);
+        request.setEndpoint(url);
+        request.setHeader('Content-Type', 'application/json');
+        if(body != null){
+            request.setBody(body);
+        }
+        return request;
+    }
+
+
+    public HttpResponse addPersonToMonitorSet(String monitorSetId, String personId) {
         String template_url = '{0}/pub/api/{1}/monitoring-set/{2}/scope/se/person/{3}';
         String url = String.format(template_url, new List<String>{
             this.client.PROPERTIES_PROVIDER.getBaseUrl(), 
@@ -17,47 +32,46 @@ public class ValitiveServices {
             monitorSetId, 
             personId
         });
-        request.setMethod('POST');
-        request.setHeader('Content-Type', 'application/json');
+
+        HttpRequest request = createHttpRequest('POST', url, null);
         return this.client.send(request);
     }
 
     public HttpResponse deletePersonsFromMonitorSet(String monitorSetId, List<String> personIds) {
-        HttpRequest request = new HttpRequest();
         String template_url = '{0}/pub/api/{1}/monitoring-set/{2}/scope/';
         String url = String.format(template_url, new List<String>{
             this.client.PROPERTIES_PROVIDER.getBaseUrl(), 
             this.client.PROPERTIES_PROVIDER.getApiVersion(),
             monitorSetId 
         });
-        request.setBody(JSON.serialize(new Map<String, Object>{
+        String body = JSON.serialize(new Map<String, Object>{
             'legalIds' => personIds,
             'monitoringSetIds' => new List<String>{monitorSetId}
-            })
+            }
         );
-        request.setMethod('DELETE');
+        
+        HttpRequest request = createHttpRequest('DELETE', url, body);
         return this.client.send(request);
     }
 
     public HttpResponse deletePersonFromMonitorSet(String monitorSetId, String personId) {
-        HttpRequest request = new HttpRequest();
+
         String template_url = '{0}/pub/api/{1}/monitoring-set/{2}/scope/';
         String url = String.format(template_url, new List<String>{
             this.client.PROPERTIES_PROVIDER.getBaseUrl(),
             this.client.PROPERTIES_PROVIDER.getApiVersion(), 
             monitorSetId 
         });
-        request.setBody(JSON.serialize(new Map<String, Object>{
+        String body = JSON.serialize(new Map<String, Object>{
             'legalIds' => new List<String>{personId},
             'monitoringSetIds' => new List<String>{monitorSetId}
-            })
+            }
         );
-        request.setMethod('DELETE');
+        HttpRequest request = createHttpRequest('DELETE', url, body);
         return this.client.send(request);
     }
 
     public HttpResponse getEvents(String monitorSetId, Map<String, Object> params) {
-        HttpRequest request = new HttpRequest();
         String template_url = '{0}/pub/api/{1}/monitoring-set/{2}/events';
         String url = String.format(template_url, new List<String>{
             this.client.PROPERTIES_PROVIDER.getBaseUrl(), 
@@ -67,12 +81,11 @@ public class ValitiveServices {
         if (params != null) {
             url += '?' + generateQueryParamString(params);
         }
-        request.setEndpoint(url);
-        request.setMethod('GET');
+        HttpRequest request = createHttpRequest('GET', url, null);
         return this.client.send(request);
     }
 
-    public String generateQueryParamString(Map<String, Object> params) {
+    private String generateQueryParamString(Map<String, Object> params) {
         List<String> queryParamList = new List<String>();
     
         for (String key : params.keySet()) {
@@ -83,6 +96,27 @@ public class ValitiveServices {
     
         return String.join(queryParamList, '&');
     }
+
+    public HttpResponse syncEvents(String entity, Map<String, Object> params){
+        HttpResponse response;
+        if(entity == 'Private'){
+            response = getEvents(
+                this.client.PROPERTIES_PROVIDER.getPrivateMonitoringSetId(),
+                params    
+            );
+        } else if(entity == 'Organisation'){
+            response = getEvents(
+                this.client.PROPERTIES_PROVIDER.getOrganisationMonitoringSetId(),
+                params    
+            );
+        }
+        if(response.getStatusCode() == 200){
+            ValitiveResponseHandler.handleEventsResponse(response);
+        }
+        return response;
+    }
+
+
 
    
     
